--- a/index.html
+++ b/index.html
@@ -1,61 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyectos y practicas Nivel 1</title>
-    <meta name="author" content="Gino Rojo Jorquera" />
-    <meta
-      name="description"
-      content="Practicas y proyectos del curso de Programacion Front-end de Funval"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyectos y Prácticas Nivel 1</title>
+    <meta name="author" content="Gino Rojo Jorquera">
+    <meta name="description" content="Prácticas y proyectos del curso de Programación Front-end de Funval">
     <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <header>
-      <nav class="nav">
-        <ul>
-          <li>
-            <picture>
-              <img src="./resources/bxs-ghost.svg" 
-              alt="Icono de mi pagina" />
-            </picture>
-          </li>
-          <li>
-            <a href="">Inicio</a>
-          </li>
-          <li>
-          <a href="https://github.com/ginorojo/frontend-1">
-          <img src="./resources/bxl-github.svg" alt="logo de github" target="_blank">
-          <span>Github</span></a>
-          </li>
+</head>
+<body>
+
+<header>
+    <nav class="nav-bar">
+        <ul class="enlaces">
+            <li>
+                <a class="link" href="#index" target="_blank">
+                    <span>Home</span>
+                    <img src="./resources/bxs-ghost (1).svg" alt="home">
+                </a>
+            </li>
+                <a class="link" href="https://github.com/Alaskechufles/week01-G2" target="_blank">
+                    <span>Github</span>
+                    <img src="./resources/bxl-github (1).svg" alt="logo de github">
+                </a>
+            </li>
         </ul>
-      </nav>
-    </header>
-    <br>
-    <main>
-        <h1>Gino Rojo Jorquera</h1>
-        <section>
-            <h2>Practicas y Proyectos</h2>
-            <ul>
-                <li>
-                    <a href="./practica-1/practica-1.html">
-                    <article class="card">
-                        <h3>Practica 1</h3>
-                        <p>Pagina web simple</p>
+    </nav>
+</header>
+
+<hr>
+
+<main>
+    <h1>Gino Rojo Jorquera</h1>
+    <hr>
+    <section>
+        <h2>Prácticas y Proyectos</h2>
+        <ul>
+            <li class="card">
+                <a href="./practica-1/practica-1.html">
+                    <article>
+                        <h3>Práctica 1</h3>
+                        <p>Página web simple</p>
                     </article>
-                    </a>
-                </li>
-                <li>
-                    <a href="./practica-2/practica-2.html">
-                        <article class="card">
-                            <h3>Practica 2</h3>
-                            <p>Pagina web simple</p>
-                        </article>
-                    </a>
-                </li>
-            </ul>
-        </section>
-    </main>
-  </body>
+                </a>
+            </li>
+            <li class="card">
+                <a href="./practica-2/practica-2.html">
+                    <article>
+                        <h3>Práctica 2</h3>
+                        <p>Página web simple</p>
+                    </article>
+                </a>
+            </li>
+        </ul>
+    </section>
+</main>
+
+<footer></footer>
+
+</body>
 </html>
