--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="./resources/bxs-ghost (1).svg" alt="home">
                 </a>
             </li>
-                <a class="link" href="https://github.com/" target="_blank">
+                <a class="link" href="https://github.com/ginorojo" target="_blank">
                     <span>Github</span>
                     <img src="./resources/bxl-github (1).svg" alt="logo de github">
                 </a>
