--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>Gino Rojo Jorquera</h1>
     <hr>
     <section>
-        <h2>Prácticas y Proyecto</h2>
+        <h2>Prácticas y Proyectos</h2>
         <ul>
             <li class="card">
                 <a href="./practica-1/practica-1.html">
