cambio de recursos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Prácticas y Proyectos</h2>
         <ul>
             <li class="card">
-                <a href="./practica-1/practica-1.html">
+                <a href="./resources/index/bxs-ghost (1).svg">
                     <article>
                         <h3>Práctica 1</h3>
                         <p>Página web simple</p>
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li class="card">
-                <a href="./practica-2/practica-2.html">
+                <a href="./resources/index/bxl-github (1).svg">
                     <article>
                         <h3>Práctica 2</h3>
                         <p>Página web simple</p>
