--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <li>
                 <a class="link" href="#index" target="_blank">
                     <span>Home</span>
-                    <img src="./resources/bxs-ghost (1).svg" alt="home">
+                    <img src="./resources/index/bxs-ghost (1).svg" alt="home">
                 </a>
             </li>
                 <a class="link" href="https://github.com/ginorojo/funval-n1" target="_blank">
                     <span>Github</span>
-                    <img src="./resources/bxl-github (1).svg" alt="logo de github">
+                    <img src="./resources/index/bxl-github (1).svg" alt="logo de github">
                 </a>
             </li>
         </ul>
@@ -37,7 +37,7 @@
         <h2>Prácticas y Proyectos</h2>
         <ul>
             <li class="card">
-                <a href="./resources/index/bxs-ghost (1).svg">
+                <a href="./practica-1/practica-1.html">
                     <article>
                         <h3>Práctica 1</h3>
                         <p>Página web simple</p>
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li class="card">
-                <a href="./resources/index/bxl-github (1).svg">
+                <a href="./recipe-page-main/index.html">
                     <article>
                         <h3>Práctica 2</h3>
                         <p>Página web simple</p>
