--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -14,12 +14,17 @@
 
     <title>Frontend Mentor | Recipe page</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Young+Serif">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
   </head>
   <body>
     <div class="contenedor-principal">
       <section class="section1">
         <img src="./assets/images/image-omelette.jpeg" alt="omellete" />
         <br />
+      </section>
+
+      <div class="omelette">
         <h1>Simple Omelette Recipe</h1>
         <br />
         <p>
@@ -27,7 +32,9 @@
           combines beaten eggs cooked to perfection, optionally filled with your
           choice of cheese, vegetables, or meats.
         </p>
-      </section>
+      </div>
+
+      
 
       <section class="section2">
         <h2>Preparation time</h2>
@@ -48,7 +55,81 @@
           <li>1 tablespoon of butter or oil</li>
           <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
         </ul>
+        <hr>
       </section>
+      <div class="title-section4">
+        <h2>Instructions</h2>
+      </div>
+      <section class="section4">
+        <br>
+        <ol>
+          <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+            You can add a tablespoon of water or milk for a fluffier texture.</li>
+          <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+          <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+            the eggs evenly coat the surface.</li>
+          <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the 
+            middle, sprinkle your chosen fillings over one half of the omelette.</li>
+          <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the 
+            fillings. Let it cook for another minute, then slide it onto a plate.</li>
+          <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+        </ol>
+        <hr>
+      <br>
+      </section>
+      <div class="title-section5">
+        <h2>Nutrition</h2>
+        <br>
+      </div>
+      <div class="parrafo-section5">
+          <p>The table below shows nutritional values per serving without the additional fillings.</p>
+      </div>
+      <br>
+      <br>
+  
+      <section class="section5">
+        <div class="calories-kcal1">
+          <div>
+            <span>Calories</span>
+          </div>
+          <div>
+            <span class="Kcal">227 Kcal</span>
+          </div>
+        </div>
+        <hr>
+
+        <div class="calories-kcal2">
+          <div>
+            <span>Carbs</span>
+          </div>
+          <div>
+            <span class="Kcal">0g</span>
+          </div>
+        </div>
+        <hr>
+
+        <div class="calories-kcal3">
+          <div>
+            <span>Protein</span>
+          </div>
+          <div>
+            <span class="Kcal">20g</span>
+          </div>
+        </div>
+        <hr>
+        <div class="calories-kcal4">
+          <div>
+            <span>Fat</span>
+          </div>
+          <div>
+            <span class="Kcal">22g</span>
+          </div>
+        </div>
+    </section>
+
+
+      </div>
+      
 
 
     </div>
