--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                     </article>
                 </a>
             </li>
+            <li class="card">
+                <a href="./practica-3/practica-3.html">
+                    <article>
+                        <h3>Práctica 3</h3>
+                        <p>Página web simple</p>
+                    </article>
+                </a>
+            </li>
         </ul>
     </section>
 </main>
