--- a/practica-3/practica-3.html
+++ b/practica-3/practica-3.html
@@ -13,7 +13,7 @@
     <div class="navegation-bar">
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="https://ginorojo.github.io/funval-n1/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
