--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -14,10 +15,46 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body class="bg-black h-screen flex flex-col justify-center items-center font[Inter]" >
+  <main class="flex flex-col bg-[#1F1F1F] w-[330px] h-[520px] rounded-xl" >
+    <section class="flex flex-col justify-center items-center p-6 ">
+      <img class="w-20 rounded-full" src="./assets/images/avatar-jessica.jpeg" alt="avatar-jessica"
+      >
+      <h1 class="text-white text[24px] mt-5 ">Jessica Randall</h1>
+      <span class="text-[#cdf066] font-medium text-[14px]">London, United Kingdom</span>
+      <p class="text-white text-[14px]">"Front-end developer and avid reader."</p>
 
-  Jessica Randall
-  London, United Kingdom
+    </section>
+
+    <section class="flex flex-col justify-center items-center gap-2">
+      <a class="text-white bg-[#333333] w-[85%] h-11 rounded-md flex justify-center items-center text-[14px]" href="">GitHub</a>
+      <a class="text-white bg-[#333333] w-[85%] h-11 rounded-md flex justify-center items-center text-[14px]" href="">Frontend Mentor</a>
+      <a class="text-white bg-[#333333] w-[85%] h-11 rounded-md flex justify-center items-center text-[14px]" href="">LinkedIn</a>
+      <a class="text-white bg-[#333333] w-[85%] h-11 rounded-md flex justify-center items-center text-[14px]" href="">Twitter</a>
+      <a class="text-white bg-[#333333] w-[85%] h-11 rounded-md flex justify-center items-center text-[14px]" href="">Instagram</a>
+      
+    </section>
+
+  </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- 
   "Front-end developer and avid reader."
 
   GitHub
@@ -29,6 +66,6 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
