--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Results summary component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <link href="./output.css" rel="stylesheet">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Righteous&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
       .attribution {
