actualizar main page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Prácticas y Proyectos</h2>
         <ul>
             <li class="card">
-                <a href="./practica-1/practica-1.html">
+                <a href="./practica-1/practica-1.html" target="_blank">
                     <article>
                         <h3>Práctica 1</h3>
                         <p>Página web simple</p>
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li class="card">
-                <a href="./recipe-page-main/index.html">
+                <a href="./recipe-page-main/index.html" target="_blank">
                     <article>
                         <h3>Práctica 2</h3>
                         <p>Página web simple</p>
@@ -53,9 +53,25 @@
                 </a>
             </li>
             <li class="card">
-                <a href="./practica-3/practica-3.html">
+                <a href="./practica-3/practica-3.html" target="_blank">
                     <article>
                         <h3>Práctica 3</h3>
+                        <p>Página web simple</p>
+                    </article>
+                </a>
+            </li>
+            <li class="card">
+                <a href="./practica-6/index.html" target="_blank">
+                    <article>
+                        <h3>Práctica 6</h3>
+                        <p>Página web simple</p>
+                    </article>
+                </a>
+            </li>
+            <li class="card">
+                <a href="./practica-7/index.html" target="_blank">
+                    <article>
+                        <h3>Práctica 7</h3>
                         <p>Página web simple</p>
                     </article>
                 </a>
