--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                     </article>
                 </a>
             </li>
+            <li class="card">
+                <a href="https://ginorojo.github.io/funval-n1/dom/index.html" target="_blank">
+                    <article>
+                        <h3>Práctica 8</h3>
+                        <p>Página web simple</p>
+                    </article>
+                </a>
+            </li>
         </ul>
     </section>
 </main>
